[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/themes/mainmenu_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menus/mainmenu.gd" type="Script" id=2]
[ext_resource path="res://src/menus/normal_button.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.00392157, 0.192157, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 74.0
text = "Mario Clone"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 448.0
custom_constants/margin_right = 250
custom_constants/margin_top = 100
custom_constants/margin_left = 250

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 250.0
margin_top = 100.0
margin_right = 774.0
margin_bottom = 370.0
custom_constants/separation = 30

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 524.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
text = "Start"
script = ExtResource( 3 )

[node name="SettingButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 100.0
margin_right = 524.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 70 )
text = "Settings"
script = ExtResource( 3 )

[node name="ExitButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 200.0
margin_right = 524.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 70 )
text = "Exit"
script = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
